@@ -40,6 +40,7 @@
     * 4098 ups_cps_battery, ups_cps_battery.temp, ups_cps_inphase, ups_cps_outphase: Several checks to monitor CPS UPS devices
     * 4118 check_bi_aggr: changed check and WATO rule to support Kerberos auth...
     * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
+    * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
     * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
